------
v2.4.1
------

[mjr] Fix connecting over SSL with MySQLi driver (PR #2, PaulSzymanski
      <PaulSzymanski@users.noreply.github.com>).



------
v2.4.0
------

[mjr] Improve Horde_Db logging options (Request #10773).
[mjr] Allow Horde_Value objects to contain stream data (Request #10805).


------
v2.3.4
------

[jan] Fix some PHP 7.2 issues.


------
v2.3.3
------

[jan] Make sure to return NULL values in result sets from Oracle.
[jan] Fix failing transactions if retrieving last INSERT ID from PostgreSQL
      fails on PHP 7.2.


------
v2.3.2
------

[jan] Drop ereg_replace() usage (Remi Collet <fedora@famillecollet.com>).
[mjr] Fix setting Oracle charset in certain cases.


------
v2.3.1
------

[jan] Bump earliest supported PostgreSQL version to 8.3.
[jan] Improve getting tables and indexes from PostgreSQL servers (Ivan Sergio
      Borgonovo <mail@webthatworks.it>).
[jan] Mark PHP 7 as supported.


------
v2.3.0
------

[mjr] Fix SQL error when setting blob fields to empty in oracle driver (Bug
      #14163).
[jan] Add 'status' argument to horde-db-migrate-component (Nicolas
      Rochelemagne <nicolas.rochelemagne@cpanel.net>).


------
v2.2.3
------

[jan] Fix certain migrations on Oracle.
[jan] Fix issues with certain locales like Turkish.


------
v2.2.2
------

[jan] Make Oracle's updateBlob() compatible with PHP 5.3.


------
v2.2.1
------

[jan] Fix using addColumn() with autoincrementKey types in SQLite.
[jan] Fix several issues with changing autoincrementKey columns in Oracle.
[mms] Fix SplitRead driver to work with the recent blob changes.


------
v2.2.0
------

[jan] Fix returning primary key value from insertBlob().
[jan] Add Horde_Db_Adapter::updateBlob().
[jan] Add Horde_Db_Value_Text to encapsulate long text values.
[jan] Add missing insertBlob to adapter interface.


------
v2.1.5
------

[jan] Fix migrating NULL values to BLOB on Oracle.


------
v2.1.4
------

[jan] Catch exceptions from PDO result set methods.


------
v2.1.3
------
