@@ -4,7 +4,7 @@
  <channel>pear.horde.org</channel>
  <extends>Db</extends>
  <summary>Database abstraction library</summary>
- <description>Horde database/SQL abstraction layer</description>
+ <description>Database access and SQL abstraction layer.</description>
  <lead>
   <name>Mike Naberezny</name>
   <user>mnaberez</user>
@@ -23,7 +23,7 @@
   <email>jan@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2017-11-11</date>
+ <date>2021-02-17</date>
  <version>
   <release>2.4.1</release>
   <api>2.4.0</api>
@@ -34,6 +34,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [jan] Fix compatibility with PostgreSQL 12+ (Ivan Sergio Borgonovo &lt;mail@webthatworks.it&gt;, PR #2).
+* [jan] Fix sequences on PostgreSQL 10+ (Ivan Sergio Borgonovo &lt;mail@webthatworks.it&gt;, PR #3).
 * [mjr] Fix connecting over SSL with MySQLi driver (PR #2, PaulSzymanski &lt;PaulSzymanski@users.noreply.github.com&gt;).
  </notes>
  <contents>
@@ -1060,6 +1062,8 @@
    <date>2017-10-20</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [jan] Fix compatibility with PostgreSQL 12+ (Ivan Sergio Borgonovo &lt;mail@webthatworks.it&gt;, PR #2).
+* [jan] Fix sequences on PostgreSQL 10+ (Ivan Sergio Borgonovo &lt;mail@webthatworks.it&gt;, PR #3).
 * [mjr] Fix connecting over SSL with MySQLi driver (PR #2, PaulSzymanski &lt;PaulSzymanski@users.noreply.github.com&gt;).
    </notes>
   </release>
